<resources>
    <string name="app_name">Fuel Buddy</string>
    <string name="Register">Register</string>
    <string name="FirstName">Firstname</string>
    <string name="LastName">Lastname</string>
    <string name="Type">Type</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Don\'t have an Account? Register here</string>
    <string name="sign_up">Sign Up</string>
    <string name="conform_password">Conform Password</string>
    <string name="login_here_txt">Already have an Account? Login here</string>
    <string name="register_as_user_btn">Register as user</string>
    <string name="register_as_user">Register as User</string>
    <string name="register_as_station_owner">Register as Station Owner</string>
    <string name="Invalid_firstName">Please Enter Valid First Name</string>
    <string name="Invalid_lastName">Please Enter Valid Last Name</string>
    <string name="Invalid_userName">Please  Enter Valid  User Name</string>
    <string name="Invalid_email">Please Enter Valid Email Address</string>
    <string name="Invalid_password">Please  Enter Valid Password</string>
    <string name="Invalid_confirmPassword">Password Does Not Match</string>
    <string name="logout">Logout</string>
    <string name="Topic_Shed_Owner_Register">Station Owner Register</string>
    <string name="petrol">Petrol</string>
    <string name="Diesel">Diesel</string>
    <string name="StationName">Station Name</string>
    <string name="Btn_Register_Station">Register Station</string>
    <string name="Update_Register_Station">Update Station</string>
    <string name="Fuel_Arrival_Time">Fuel Arrival Time</string>
    <string name="Fuel_Finish_Time">Fuel Finish Time</string>
    <string name="Filling_Station_Register">Filling Station Register</string>
    <string name="Filling_Station_Update">Filling Station Update</string>
    <string name="Add_New">Add New</string>
    <string name="Cancel">Cancel</string>
    <string name="Message">Do you want to delete this station?</string>
    <string name="Alert">Alert !</string>
    <string name="Update_station">Update Fuel Station Details</string>
    <string name="title_placeholder">Title</string>
    <string name="location">Station Location</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="finish_time">Finish Time</string>
    <string name="finish">Finished</string>
    <string name="available">Available</string>
    <string name="fuel_status">Fuel Status Of the Filling Station.</string>
    <string name="fuel_types">Fuel Types</string>
    <string name="Filling_Station_Update_Title">Update Filling Station</string>
    <string name="update">Update Now</string>
    <string name="update_date_here">Click here to update date</string>
    <string name="update_time_here">"Click here to update time "</string>
    <string name="Want_to_exit">Are you want to exit this app?</string>
    <string name="exit_app">Exit</string>
    <string name="Delete">Delete</string>
    <string name="invalid_station_name">This field cant be empty</string>
    <string name="Search_here">Search here ......</string>
    <string name="Location">Location</string>
    <string name="Fuel_Type_Petrol">Petrol Finished</string>
    <string name="Fuel_Type_Diesel">Diesel Finished</string>
    <string name="Time_Waiting_In_Queue">* You are the first person in the queue</string>
    <string name="Car_Count">Car Count</string>
    <string name="Van_Count">Van Count</string>
    <string name="Bike_Count">Bike Count</string>
    <string name="ThreeWheel_Count">Three Wheel Count</string>
    <string name="Heading_User_Join_Queue_Popup">Enter Your Vehicle Details</string>
    <string name="Txt_Vehicle_Selection_User_Join_Queue_Popup">Select Vehicle Type</string>
    <string name="Save">Save</string>
    <string name="empty">No Filling Stations to display.</string>
    <string name="Want_to_exit_this_queue">Are you want to exit from this queue?</string>
    <string name="Hisotry">Fuel Pumping History</string>
    <string name="VehicleType">Vehicle Type</string>
    <string name="depart_time">Depart Time</string>
    <string name="edit_details">Update Details</string>
    <string-array name="locations">
        <item>Colombo</item>
        <item>Kalutara</item>
        <item>Gampaha</item>
    </string-array>
    <string-array name="vehicleType">
        <item>Car</item>
        <item>Van</item>
        <item>Bike</item>
        <item>Three Wheeler</item>
    </string-array>
    <string name="Profile_First_Name">First Name</string>
    <string name="Profile_Last_Name">Last Name</string>
    <string name="Profile_Username">Username</string>
    <string name="Profile_Email">Email</string>

</resources>